# flame

./: .cursorignore  .dockerignore  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  clippy.toml  compose-e2e.yaml  compose-sra.yaml  compose.yaml  rustfmt.toml
ci/: flame-cluster-benchmark.yaml  flame-cluster-local.yaml  flame-cluster.yaml  flame-conf.yaml  flame-local-conf.yaml  flame-local.yaml  (+3 more)
cri/: Cargo.toml  build.rs
cri/protos/: cri.proto
cri/src/: apis.rs  e2e.rs  lib.rs  manager.rs
cri/tests/: integration_test.rs
e2e/: CHANGES_SUMMARY.md  E2E_ENHANCEMENTS.md  QUICK_REFERENCE.md  pyproject.toml  runner_example.py
e2e/src/e2e/: __init__.py  api.py  basic_svc.py  error_svc.py  flmrun_helpers.py  helpers.py  instance_svc.py  service.py
e2e/tests/: helpers.py  test_agent.py  test_application.py  test_batch.py  test_cache.py  test_cache_lru.py  test_core.py  test_flmrun.py  test_get_data.py  test_open_session.py  test_runner.py  test_session.py  test_session_ins.py  test_session_svc.py  test_shim_selection.py  utils.py
examples/agents/sra/: apis.py  client.py  collector.py  compose.yaml  crawler.py  embed.py  pyproject.toml  readme.md  sra.py  sra.yaml  sra_report_20251205_032456.md  writer.py
examples/pi/python/: README.md  main.py  pi.py  pyproject.toml
examples/pi/rust/: Cargo.toml
examples/pi/rust/src/: client.rs  service.rs
examples/ps/: README.md  main.py  ps.py  pyproject.toml
executor_manager/: Cargo.toml
executor_manager/src/: client.rs  executor.rs  main.rs  manager.rs  stream_handler.rs
executor_manager/src/cache/: client.rs  mod.rs  types.rs
executor_manager/src/shims/: grpc_shim.rs  host_shim.rs  log_shim.rs  mod.rs  wasm_shim.rs
executor_manager/src/states/: binding.rs  bound.rs  idle.rs  mod.rs  releasing.rs  unbinding.rs  void.rs
flmctl/: Cargo.toml
flmctl/src/: apis.rs  close.rs  create.rs  helper.rs  list.rs  main.rs  register.rs  unregister.rs  update.rs  utils.rs  view.rs
flmexec/: Cargo.toml
flmexec/src/: client.rs  service.rs
flmexec/src/script/: mod.rs
flmexec/src/script/lang/: python.rs  shell.rs
flmping/: Cargo.toml
flmping/src/: client.rs  service.rs
object_cache/: Cargo.toml  README.md
object_cache/src/: cache.rs  eviction.rs  lib.rs  main.rs  standalone.rs
object_cache/src/cache/: client.rs  mod.rs
object_cache/tests/: integration_test.rs
perf/flamepy/: compose.yaml  main.py  pyproject.toml  service.py
rpc/: Cargo.toml  build.rs
rpc/protos/: backend.proto  frontend.proto  types.proto
rpc/src/: lib.rs
sdk/python/: Makefile  README.md  build_protos.py  pyproject.toml  requirements-dev.txt
sdk/python/docs/: API.md
sdk/python/example/: client.py  instance.py  service.py
sdk/python/protos/: frontend.proto  types.proto
sdk/python/src/flamepy/: __init__.py  __main__.py  cache.py  client.py  frontend_pb2.py  frontend_pb2_grpc.py  instance.py  runner.py  runpy.py  service.py  shim_pb2.py  shim_pb2_grpc.py  types.py  types_pb2.py  types_pb2_grpc.py
sdk/python/src/flamepy/agent/: __init__.py  client.py  instance.py
sdk/python/src/flamepy/cache/: __init__.py  cache.py
sdk/python/src/flamepy/core/: __init__.py  cache.py  client.py  frontend_pb2.py  frontend_pb2_grpc.py  service.py  shim_pb2.py  shim_pb2_grpc.py  types.py  types_pb2.py
sdk/python/src/flamepy/proto/: __init__.py  frontend_pb2.py  frontend_pb2_grpc.py  shim_pb2.py  shim_pb2_grpc.py  types_pb2.py
sdk/python/src/flamepy/rl/: __init__.py  __main__.py  runner.py  runpy.py  types.py
sdk/python/src/flamepy/runner/: __init__.py  __main__.py  data.py  helper.py  runner.py  runpy.py  storage.py  types.py
sdk/python/src/flamepy/util/: __init__.py
sdk/python/test/: test_flame.py
sdk/python/tests/: __init__.py  conftest.py  test_agent.py  test_cache.py  test_client.py  test_instance.py  test_runner.py  test_runner_service.py  test_service.py  test_types.py
sdk/rust/: Cargo.toml  build.rs
sdk/rust/protos/: frontend.proto  shim.proto  types.proto
sdk/rust/src/: trace.rs
sdk/rust/src/apis/: ctx.rs  mod.rs
sdk/rust/src/client/: mod.rs
sdk/rust/src/service/: async_queue.rs  mod.rs
sdk/rust/tests/: benchmark_test.rs  integration_test.rs
session_manager/: Cargo.toml
session_manager/migrations/sqlite/: 20240104152103_init.sql  20250115120000_app.sql  202509119120000_event.sql  20251005120000_version.sql  20260112000000_add_url.sql  20260123000000_add_session_instances.sql  20260201000000_remove_shim.sql  20260320000000_add_shim.sql  20260321000000_add_nodes_executors.sql  20260413000000_add_batch_fields.sql
session_manager/src/: main.rs
session_manager/src/apiserver/: backend.rs  frontend.rs  mod.rs
session_manager/src/controller/: mod.rs
session_manager/src/controller/connections/: closed.rs  connected.rs  draining.rs  manager.rs  mod.rs
session_manager/src/controller/executors/: binding.rs  bound.rs  idle.rs  mod.rs  releasing.rs  unbinding.rs  void.rs
session_manager/src/controller/nodes/: mod.rs  not_ready.rs  ready.rs  unknown.rs
session_manager/src/controller/states/: binding.rs  bound.rs  idle.rs  mod.rs  releasing.rs  unbinding.rs  void.rs
session_manager/src/events/: fs.rs  memory.rs  mod.rs
session_manager/src/model/: mod.rs  watch.rs
session_manager/src/model/connection/: mod.rs
session_manager/src/provider/: k8s.rs  mod.rs  none.rs
session_manager/src/scheduler/: ctx.rs  mod.rs  statement.rs
session_manager/src/scheduler/actions/: allocate.rs  backfill.rs  dispatch.rs  mod.rs  shuffle.rs
session_manager/src/scheduler/allocator/: mod.rs
session_manager/src/scheduler/allocator/plugins/: fairshare.rs  mod.rs
session_manager/src/scheduler/dispatcher/: mod.rs
session_manager/src/scheduler/dispatcher/plugins/: fairshare.rs  mod.rs
session_manager/src/scheduler/plugins/: fairshare.rs  gang.rs  mod.rs  shim.rs
session_manager/src/storage/: derive_events_path_tests.rs  load_data_tests.rs  mod.rs  node_executor_tests.rs  node_tests.rs  session_limit_tests.rs
session_manager/src/storage/engine/: filesystem.rs  mod.rs  none.rs  sqlite.rs  types.rs
(+146 files in other folders)
