[workspace]
resolver = "1"
members = [
    "common",
    "flmctl",
    "flmping",
    "flmexec",
    "session_manager",
    "executor_manager",
    "rpc",
    "sdk/rust",
    "examples/pi",
    "cri",
    "stdng",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"
prost-build = "0.13"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
bytes = "1"
tower = "0.5"
hyper-util = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
actix-rt = "2"
nix = { version = "0.30", features = ["signal"] }
uuid = { version = "1", features = ["v4", "serde"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }

strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
rand = { version = "0.9" }

sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "sqlite", "postgres", "macros" ] }

url = { version = "2", features = ["serde"] }

bincode = { version = "2" }
