[package]
name = "cri-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cri-e2e"
path = "src/e2e.rs"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
prost = { workspace = true }
tower = { workspace = true }
hyper-util = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
nix = { workspace = true }

uuid = { version = "1.18.1", features = ["v4"] }


[build-dependencies]
tonic-build = { workspace = true}
