[package]
name = "cri-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
stdng = { path = "../stdng" }

tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
prost = { workspace = true }
tower = { workspace = true }
hyper-util = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
nix = { workspace = true }

uuid = { workspace = true }


[build-dependencies]
tonic-build = { workspace = true}
