[project]
name = "e2e"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "XFLOPS Authors", email = "support@xflops.io" }
]
requires-python = ">=3.12"
dependencies = [
    "flamepy",
]

[project.scripts]
e2e = "e2e:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
]

[tool.uv.sources]
flamepy = { path = "../sdk/python" }
