[project]
name = "e2e"
version = "0.1.0"
description = "The e2e test of Flame"
readme = "README.md"
authors = [
    { name = "XFLOPS Authors", email = "support@xflops.io" }
]
requires-python = ">=3.9"
dependencies = [
    "grpcio>=1.76",
    "grpcio-tools>=1.76",
    "flamepy",
]

[project.scripts]
e2e = "e2e:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["e2e*"]
exclude = ["tests*"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "black>=25.1.0",
    "isort>=5.0.0",
]

[tool.uv.sources]
flamepy = { path = "/usr/local/flame/sdk/python", editable = true }

