[package]
name = "flame-executor-manager"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc = { path = "../rpc" }
common = { path = "../common" }
stdng = { path = "../stdng" }

tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
prost = { workspace = true }
tower = { workspace = true }
hyper-util = { workspace = true }
chrono = { workspace = true }
nix = { workspace = true }
url = { workspace = true }
actix-rt = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
bson = { workspace = true }

actix-web = "4"
bytes = { workspace = true }
wasmtime = "16"
wasmtime-wasi = "16"
anyhow = "1"
tokio-stream = { workspace = true }
network-interface = "2"
regex = "1"

[dev-dependencies]
reqwest = { version = "0.13", features = ["json"] }

[lints.rust]
unused = "allow"
unsafe_code = "forbid"
