[package]
name = "flmctl"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flame-rs = { path = "../sdk/rust" }

tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }

clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"

url = {version = "2.5"}

comfy-table = "7.2"

serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
serde_derive = "1.0"
jsonschema = "0.33.0"
