[package]
name = "flmexec"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flame-rs = { path = "../sdk/rust" }

tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
chrono = { workspace = true }
indicatif = {version = "*", features = ["rayon"]}
tempfile = {version = "*"}
rand = { workspace = true }

[[bin]]
name = "flmexec"
path = "src/client.rs"

[[bin]]
name = "flmexec-service"
path = "src/service.rs"
