[package]
name = "flame-object-cache"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }

clap = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }

actix-web = "4"
actix-rt = "2"
bson = { version = "3", features = ["serde"] }
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12" }


[[bin]]
name = "flame-object-cache"
path = "src/standalone.rs"