[package]
name = "object-cache"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }

clap = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
actix-rt = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

network-interface = "2"
actix-web = "4"
bson = { version = "3", features = ["serde"] }
reqwest = { version = "0.12" }
regex = "1"

[[bin]]
name = "flame-object-cache"
path = "src/standalone.rs"