[package]
name = "flame-session-manager"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc = { path = "../rpc" }
common = { path = "../common" }

tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
clap = { workspace = true }
prost = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
chrono = { workspace = true }
bincode = { workspace = true }
futures = { workspace = true }
tokio-stream = { version = "0.1"}
url = { workspace = true }
thiserror = "1"
bytes = "1"
jsonschema = "0.33.0"

[dependencies.uuid]
version = "1.19.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
tokio-test = "*"
rand = { workspace = true }
tempfile = "3"

[lints.rust]
unused = "allow"
unsafe_code = "forbid"
