[package]
name = "flame-session-manager"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc = { path = "../rpc" }
common = { path = "../common" }
stdng = { path = "../stdng" }

tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
clap = { workspace = true }
prost = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
chrono = { workspace = true }
bincode = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
jsonschema = { workspace = true }

uuid = { workspace = true }

[dev-dependencies]
tokio-test = "*"
rand = { workspace = true }
tempfile = { workspace = true }

[lints.rust]
unused = "allow"
unsafe_code = "forbid"
