[package]
name = "flame-rs"
version = "0.5.0"
edition = "2021"
build = "build.rs"

description = "The Rust SDK of Flame"
repository = "https://github.com/xflops/flame"
license-file = "../../LICENSE"
readme = "../../README.md"

[dependencies]
stdng = { path = "../../stdng" }

tower = "0.4"
prost = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tonic = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

time = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_derive = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
