[project]
name = "pi"
version = "0.1.0"
description = "Monte Carlo Estimation of π by flamepy.Runner"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flamepy",
    "numpy"
]

[tool.setuptools]
py-modules = ["pi"]

[tool.uv.sources]
flamepy = { path = "/usr/local/flame/sdk/python" }