[package]
name = "pi"
version = "0.1.0"
edition = "2021"

[dependencies]
flame-rs = { path = "../../../sdk/rust" }
stdng = { path = "../../../stdng" }

tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand_distr = "*"
rand = { workspace = true }
futures = { workspace = true }
clap = { workspace = true }

[[bin]]
name = "pi-service"
path = "src/service.rs"

[[bin]]
name = "pi"
path = "src/client.rs"
